--- a/Dusza-Fogadas/Menu.xaml
+++ b/Dusza-Fogadas/Menu.xaml
@@ -5,28 +5,227 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Dusza_Fogadas"
         mc:Ignorable="d"
-        Title="Menu" Height="600" Width="410">
+        Title="Menu" Height="670" Width="470">
+
+
+    <Border BorderBrush="#2b2b2b" Background="#f5f5f5" Padding="0 0 0 10" BorderThickness="1.5" Height="550" Width="370" CornerRadius="7">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <Label BorderThickness="0 0 0 3" Padding="15 0 0 7" BorderBrush="Black" FontSize="30" VerticalAlignment="Center">Main Menu</Label>
+        <Label Padding="0 10 0 10" HorizontalAlignment="Center" FontSize="30" VerticalAlignment="Center">Main Menu</Label>
+       
 
         <DockPanel Grid.Row="1" VerticalAlignment="Stretch" LastChildFill="False">
-            <Button x:Name="btnNewGame" Click="btnNewGame_Click" BorderThickness="0.5 0.5 2 3" Background="white" HorizontalContentAlignment="Stretch" HorizontalAlignment="Stretch" FontSize="25" Height="50" Padding="20 0 0 0" DockPanel.Dock="Top">Create new Game</Button>
+            <Button x:Name="btnNewGame" Click="btnNewGame_Click" DockPanel.Dock="Top"
+                    VerticalAlignment="Center" 
+                    Height="50" 
+                    HorizontalAlignment="Stretch" 
+                    FontSize="25"
+                    HorizontalContentAlignment="Center"
+                    Margin="20 25 20 15"
+                    Background="#e6e6e6"
+                    FontWeight="Light">Create new Game
+                    <Button.Resources>
+                        <Style TargetType="{x:Type Border}">
+                            <Setter Property="CornerRadius" Value="5"/>
+                        </Style>
+                    </Button.Resources>
+                    <Button.Style>
+                        <Style TargetType="{x:Type Button}">
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="{x:Type Button}">
+                                        <Border x:Name="Border" BorderThickness="1" BorderBrush="#6b6b6b" Background="{TemplateBinding Background}">
+                                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                        </Border>
+                                        <ControlTemplate.Triggers>
+                                            <Trigger Property="IsMouseOver" Value="True">
+                                                <Setter Property="Background" Value="#d1d1d1" TargetName="Border" />
+                                            </Trigger>
+                                        </ControlTemplate.Triggers>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </Button.Style>
+                </Button>
 
-            <Button x:Name="btnBet" Click="btnBet_Click" BorderThickness="0.5 0.5 2 3" Background="white" HorizontalContentAlignment="Left" HorizontalAlignment="Stretch" FontSize="25" Height="50" Padding="20 0 0 0" DockPanel.Dock="Top">Make a bet</Button>
+            <Button x:Name="btnBet" Click="btnBet_Click" DockPanel.Dock="Top"
+                    VerticalAlignment="Center" 
+                    Height="50" 
+                    HorizontalAlignment="Stretch" 
+                    FontSize="25"
+                    HorizontalContentAlignment="Center"
+                    Margin="20 0 20 15"
+                    Background="#e6e6e6"
+                    FontWeight="Light">Make a bet
+                    <Button.Resources>
+                        <Style TargetType="{x:Type Border}">
+                            <Setter Property="CornerRadius" Value="5"/>
+                        </Style>
+                    </Button.Resources>
+                    <Button.Style>
+                        <Style TargetType="{x:Type Button}">
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="{x:Type Button}">
+                                        <Border x:Name="Border" BorderThickness="1" BorderBrush="#6b6b6b" Background="{TemplateBinding Background}">
+                                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                        </Border>
+                                        <ControlTemplate.Triggers>
+                                            <Trigger Property="IsMouseOver" Value="True">
+                                                <Setter Property="Background" Value="#d1d1d1" TargetName="Border" />
+                                            </Trigger>
+                                        </ControlTemplate.Triggers>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </Button.Style>
+                </Button>
 
-            <Button x:Name="btnEndGame" Click="btnEndGame_Click" BorderThickness="0.5 0.5 2 3" Background="white" HorizontalContentAlignment="Left" HorizontalAlignment="Stretch" FontSize="25" Height="50" Padding="20 0 0 0" DockPanel.Dock="Top">End a Game</Button>
+            <Button x:Name="btnEndGame" Click="btnEndGame_Click" DockPanel.Dock="Top"
+                    VerticalAlignment="Center" 
+                    Height="50" 
+                    HorizontalAlignment="Stretch" 
+                    FontSize="25"
+                    HorizontalContentAlignment="Center"
+                    Margin="20 0 20 15"
+                    Background="#e6e6e6"
+                    FontWeight="Light">End a Game
+                    <Button.Resources>
+                        <Style TargetType="{x:Type Border}">
+                            <Setter Property="CornerRadius" Value="5"/>
+                        </Style>
+                    </Button.Resources>
+                    <Button.Style>
+                        <Style TargetType="{x:Type Button}">
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="{x:Type Button}">
+                                        <Border x:Name="Border" BorderThickness="1" BorderBrush="#6b6b6b" Background="{TemplateBinding Background}">
+                                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                        </Border>
+                                        <ControlTemplate.Triggers>
+                                            <Trigger Property="IsMouseOver" Value="True">
+                                                <Setter Property="Background" Value="#d1d1d1" TargetName="Border" />
+                                            </Trigger>
+                                        </ControlTemplate.Triggers>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </Button.Style>
+                </Button>
 
-            <Button BorderThickness="0.5 0.5 2 3" Background="white" HorizontalContentAlignment="Left" HorizontalAlignment="Stretch" FontSize="25" Height="50" Padding="20 0 0 0" DockPanel.Dock="Top">Lekérdezések (még nem)</Button>
+            <Button DockPanel.Dock="Top"
+                    VerticalAlignment="Center" 
+                    Height="50" 
+                    HorizontalAlignment="Stretch" 
+                    FontSize="25"
+                    HorizontalContentAlignment="Center"
+                    Margin="20 0 20 15"
+                    Background="#e6e6e6"
+                    FontWeight="Light">Lekérdezések
+                    <Button.Resources>
+                        <Style TargetType="{x:Type Border}">
+                            <Setter Property="CornerRadius" Value="5"/>
+                        </Style>
+                    </Button.Resources>
+                    <Button.Style>
+                        <Style TargetType="{x:Type Button}">
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="{x:Type Button}">
+                                        <Border x:Name="Border" BorderThickness="1" BorderBrush="#6b6b6b" Background="{TemplateBinding Background}">
+                                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                        </Border>
+                                        <ControlTemplate.Triggers>
+                                            <Trigger Property="IsMouseOver" Value="True">
+                                                <Setter Property="Background" Value="#d1d1d1" TargetName="Border" />
+                                            </Trigger>
+                                        </ControlTemplate.Triggers>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </Button.Style>
+                </Button>
 
-            <Button x:Name="btnExit" Click="btnExit_Click" BorderThickness="0.5 0.5 2 3" Background="white" HorizontalContentAlignment="Left" HorizontalAlignment="Stretch" FontSize="25"  Height="50" Padding="20 0 0 0" DockPanel.Dock="Bottom">Exit</Button>
+            <Button x:Name="btnExit" Click="btnExit_Click" DockPanel.Dock="Bottom"
+                    VerticalAlignment="Center" 
+                    Height="50" 
+                    HorizontalAlignment="Stretch" 
+                    FontSize="25"
+                    HorizontalContentAlignment="Center"
+                    Margin="50 0 50 15"
+                    Background="#cc4141"
+                    Foreground="#e6e6e6"
+                    FontWeight="Light">Exit
+                    <Button.Resources>
+                        <Style TargetType="{x:Type Border}">
+                            <Setter Property="CornerRadius" Value="5"/>
+                        </Style>
+                    </Button.Resources>
+                    <Button.Style>
+                        <Style TargetType="{x:Type Button}">
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="{x:Type Button}">
+                                        <Border x:Name="Border" Background="{TemplateBinding Background}">
+                                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                        </Border>
+                                        <ControlTemplate.Triggers>
+                                            <Trigger Property="IsMouseOver" Value="True">
+                                                <Setter Property="Background" Value="#de4747" TargetName="Border" />
+                                            </Trigger>
+                                        </ControlTemplate.Triggers>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </Button.Style>
+                </Button>
 
-            <Button x:Name="btnLogOut" Click="btnLogOut_Click" BorderThickness="0.5 0.5 2 3" Background="white" HorizontalContentAlignment="Left" HorizontalAlignment="Stretch"  FontSize="25" Height="50" Padding="20 0 0 0" DockPanel.Dock="Bottom">Log out</Button>
+            <Button x:Name="btnLogOut" Click="btnLogOut_Click" DockPanel.Dock="Bottom"
+                    VerticalAlignment="Center" 
+                    Height="50" 
+                    HorizontalAlignment="Stretch" 
+                    FontSize="25"
+                    Margin="50 0 50 15"
+                    Background="#cc4141"
+                    Foreground="#e6e6e6"
+                    HorizontalContentAlignment="Center"
+                    FontWeight="Light">Log out
+                    <Button.Resources>
+                        <Style TargetType="{x:Type Border}">
+                            <Setter Property="CornerRadius" Value="5"/>
+                        </Style>
+                    </Button.Resources>
+                    <Button.Style>
+                        <Style TargetType="{x:Type Button}">
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="{x:Type Button}">
+                                        <Border x:Name="Border" Background="{TemplateBinding Background}">
+                                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                        </Border>
+                                        <ControlTemplate.Triggers>
+                                            <Trigger Property="IsMouseOver" Value="True">
+                                                <Setter Property="Background" Value="#de4747" TargetName="Border" />
+                                            </Trigger>
+                                        </ControlTemplate.Triggers>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </Button.Style>
+                </Button>
         </DockPanel>
         
     </Grid>
+    </Border>
 </Window>
